--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,23 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "py-chainlink-streams"
 version = "0.1.0"
-description = "A Chainlink Data Streams Python client SDK implementation"
+description = "Unofficial lightweight Python SDK for Chainlink Data Streams API (not maintained by Chainlink Labs)"
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = []
+license = {text = "MIT"}
+dependencies = [
+    "eth-abi>=4.0.0",
+    "eth-utils>=2.0.0",
+    "requests>=2.31.0",
+    "websockets>=12.0",
+]
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
