--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "py-chainlink-streams"
 version = "0.1.0"
-description = "Unofficial lightweight Python SDK for Chainlink Data Streams API (not maintained by Chainlink Labs)"
+description = "Unofficial lightweight Python SDK for Chainlink Data Streams API"
 readme = "README.md"
 requires-python = ">=3.9"
 license = {text = "MIT"}
@@ -14,6 +14,14 @@ dependencies = [
     "eth-utils>=2.0.0",
     "requests>=2.31.0",
     "websockets>=12.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-cov>=4.0.0",
+    "pytest-mock>=3.10.0",
 ]
 
 [tool.setuptools]
