--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,9 @@ package-dir = {"" = "src"}
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.pytest.ini_options]
+markers = [
+    "integration: marks tests as integration tests (requires network and API credentials)",
+]
+asyncio_mode = "auto"
